--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "test": "node test/"
+    "test": "node test/",
+    "unit": "mocha test/unit.js"
   },
   "types": "dist/index.d.ts",
   "author": "dotvirus",
   "license": "ISC",
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/dotvirus/ptree.ts.git"
+    "type": "git",
+    "url": "https://github.com/dotvirus/ptree.ts.git"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.2.0"
   }
 }
