--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dotvirus/ptree",
-  "version": "1.3.1",
+  "version": "1.3.1b",
   "description": "Deep object walking, manipulation and validation",
   "main": "dist/index.js",
   "scripts": {
@@ -11,7 +11,16 @@
   "author": "dotvirus",
   "license": "ISC",
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/dotvirus/ptree.ts.git"
-  }
+    "type": "git",
+    "url": "https://github.com/dotvirus/ptree.ts.git"
+  },
+  "keywords": [
+    "typescript",
+    "object-validator",
+    "object-manipulation",
+    "tree-structure",
+    "deep",
+    "ptree",
+    "leaf"
+  ]
 }
