--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@dotvirus/ptree",
-  "version": "1.5.2",
-  "description": "Deep object walking, manipulation and validation",
+  "version": "2.0.0",
+  "description": "Deep object walking & manipulation",
   "main": "dist/index.js",
   "scripts": {
+    "deploy": "tsc && npm run test && npm publish --access public",
     "watch": "tsc --watch",
-    "build": "tsc",
     "test": "node test/"
   },
   "types": "dist/index.d.ts",
@@ -15,13 +15,21 @@
     "type": "git",
     "url": "https://github.com/dotvirus/ptree.ts.git"
   },
+  "files": [
+    "dist/"
+  ],
   "keywords": [
     "typescript",
-    "object-validator",
     "object-manipulation",
     "tree-structure",
     "deep",
     "ptree",
     "leaf"
-  ]
+  ],
+  "dependencies": {
+    "glob-object": "^1.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^12.12.18"
+  }
 }
