--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dotvirus/ptree",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Deep object walking & manipulation",
   "main": "dist/index.js",
   "scripts": {
@@ -27,7 +27,7 @@
     "leaf"
   ],
   "dependencies": {
-    "glob-object": "^1.0.0"
+    "picomatch": "^2.1.1"
   },
   "devDependencies": {
     "@types/node": "^12.12.18"
